--- a/src/ButtonMain/ButtonMain.css
+++ b/src/ButtonMain/ButtonMain.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 #image-button-style {
     height: 100px;
     cursor: pointer;
