--- a/src/ButtonMain/ButtonMain.css
+++ b/src/ButtonMain/ButtonMain.css
@@ -1,8 +1,10 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-image: url('./Assets/Jojo2.jpg');
+    background-size: cover; /* faz a imagem cobrir toda a área disponível */
+    background-position: center; /* centraliza a imagem */
+    background-attachment: fixed; /* fixa a imagem no fundo, para que não role com a página */
 }
 
 #image-button-style {
@@ -64,7 +66,7 @@ body {
 }
 
 #image-button:after {
-    z-index: -2;
+    z-index: -1;
     content: '';
     position: absolute;
     width: 100%;
@@ -89,3 +91,18 @@ body {
     }
 }
 
+h2 {
+    font-size: 24px;
+    color: red;
+    text-align: center;
+    position: absolute;
+    top: calc(45% - 120px); /* Posiciona o título acima do botão */
+    left: 50%;
+    transform: translateX(-50%); /* Centraliza horizontalmente */
+    z-index: 1; /* Garante que o título fique sobre o botão */
+}
+
+/* Classe para esconder o título */
+.hidden {
+    display: none;
+}
