--- a/src/Formulario/index.css
+++ b/src/Formulario/index.css
@@ -16,7 +16,7 @@ body{
     width: 600px;
     height: 700px;
     margin: 1rem;
-    background-color: rgba(0, 0, 0, 0.194);
+    background-color: whitesmoke;
 }
 
 .container-personagens__dentro {
