--- a/src/Formulario/index.css
+++ b/src/Formulario/index.css
@@ -5,7 +5,7 @@ body{
     text-align: center;
     height: 100vh;
     margin: 0;
-    width: 200vh;
+    width: 100%;
 }
 
 .container-personagens {
