--- a/src/ButtonMain/ButtonMain.css
+++ b/src/ButtonMain/ButtonMain.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Krona+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Krona+One&family=Madimi+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-    background-image: url('./Assets/Jojo2.jpg');
+    background-color: black;
     background-size: cover; /* faz a imagem cobrir toda a área disponível /
     background-position: center; / centraliza a imagem /
     background-attachment: fixed; / fixa a imagem no fundo, para que não role com a página */
@@ -97,14 +100,15 @@ body {
 
 h2 {
     font-size: 28px;
-    color: red;
+    font-family: Madimi One;
+    color: rgb(250, 250, 250);
     text-align: center;
     position: absolute;
     top: calc(45% - 120px); /* Posiciona o título acima do botão */
     left: 50%;
     transform: translateX(-50%); /* Centraliza horizontalmente */
     z-index: 1; /* Garante que o título fique sobre o botão */
-    animation: blinking 1s infinite; /* Define a animação */
+    animation: blinking 2s infinite; /* Define a animação */
 }
 
 /* Classe para esconder o título */
