--- a/src/Formulario/index.css
+++ b/src/Formulario/index.css
@@ -17,7 +17,39 @@ body{
     width: 600px;
     height: 700px;
     margin: 1rem;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
+}
+
+.glow:before, .glow:after {
+    position: absolute;
+    left: -2;
+    top: -2;
+    background: linear-gradient(45deg , #e6fb04, #ff6600, #00ff66, #00ffff, #ff99ff, #ff0099, #6e0dd0, #ff3300, #099fff );
+    content: '';
+    background-size: 400%;
+    top: 105px;
+    border-radius: 1rem;
+    width: calc(33% + 7px);
+    height: calc(74% + 35px);
+    z-index: -1;
+    animation: animate 20s linear infinite;
+}
+
+@keyframes animate{
+    0% {
+        background-position: 0 0;
+    }
+    50%{
+        background-position: 400% 0;
+    }
+    100%{
+        background-position: 0 0;
+    }
+}
+
+.glow:after{
+    filter: blur(30px)
+    opacity(0.99)
 }
 
 .container-personagens__dentro {
@@ -33,6 +65,10 @@ body{
     background-color: rgb(255, 255, 255);
 }
 
+#h1-formulario {
+    font-family: poppins;
+    font-size: 24px;
+}
 
 #button-33, #button-44, #button-55 {
   background-color: #aa01ff;
