--- a/src/Resultado/index.css
+++ b/src/Resultado/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Krona+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Krona+One&family=Madimi+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 #resetarButton {
 
     width: 100px;
@@ -10,4 +13,15 @@
     align-content: center;
     text-align: center;
     flex-direction: column;
+}
+
+#descricao {
+    font-size: 14px;
+    font-family: poppins;
+}
+
+#personagem-style {
+    margin: 1rem;
+    font-size: 30px;
+    font-family: poppins;
 }
